Custom target for library

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -18,6 +18,14 @@ add_custom_command(
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DEPENDS litesql-gen exampledatabase.xml 
    )
+   
+add_custom_command(
+   OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/main.hpp
+   COMMAND litesql-gen -v -t c++ main_skype.xml
+   MAIN_DEPENDENCY main_skype.xml
+   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+   DEPENDS litesql-gen main_skype.xml
+   )
 
 add_executable(example ${example_SOURCES} ${example_HEADERS})
 add_executable(skype_db ${SkypeDB_SOURCES})
