--- a/src/generator/CMakeLists.txt
+++ b/src/generator/CMakeLists.txt
@@ -40,15 +40,9 @@ SET (MODEL_LIBS
     litesql
     ${EXPAT_LIBRARIES}
 )
-add_library(model SHARED ${libmodel_SOURCES})
+add_library(model STATIC ${libmodel_SOURCES})
 message("Project name is: ${PROJECT_NAME}")
 target_link_libraries(model ${MODEL_LIBS})
-install(TARGETS model EXPORT model
-            RUNTIME DESTINATION lib 
-            LIBRARY DESTINATION lib
-            ARCHIVE DESTINATION lib/static 
-            COMPONENT devel)
-#install(EXPORT model DESTINATION lib)
  
 add_executable(litesql-gen ${litesql-gen_SOURCES})
 #add_executable(ddl2litesql ${ddl2litesql_SOURCES})
@@ -65,5 +59,4 @@ if (LITESQL_WITH_UI)
 #  endif(MSVC)
 endif(LITESQL_WITH_UI)
 
-#install(TARGETS litesql-gen RUNTIME DESTINATION bin COMPONENT generator)
 INCLUDE_DIRECTORIES(../library ${EXPAT_INCLUDE_DIRS})
